Fade In animation

--- a/item.html
+++ b/item.html
@@ -18,10 +18,12 @@
 <body>
   <header class="mg border-bottom">
     <article class="inch flex space">
-      <h1 class="logo-tm"></h1>
+      <a href="./start.html">
+        <h1 class="logo-tm"></h1>
+      </a>
       <section class="login-bag flex space align">
         <a href="#" class="text px-12">E-mail sing up</a>
-        <a href="#" class="text bag px-12" id="bag">Bag (0)</a>
+        <a href="./shopping-bag.html" class="text bag px-12" id="bag">Bag (0)</a>
         <a href="javascript:void(0);" class="icon" onclick="toggle()">
           <img src="./img/ico_menu.png" alt="ico" id="ico">
         </a>
@@ -106,30 +108,30 @@
   </article>
 
   <article class="flex grow border-bottom width mid">
-      <section class="block border-right width">
-        <img src="./img/adidas.png" alt="Adidas" class="high">
-        <div class="flex col cent align pos">
-          <h3 class="title bold white">Addidas Blue</h3>
-          <i class="white sale px-16">For men</i>
+    <section class="block border-right width">
+      <img src="./img/adidas.png" alt="Adidas" class="high">
+      <div class="flex col cent align pos">
+        <h3 class="title bold white">Addidas Blue</h3>
+        <i class="white sale px-16">For men</i>
+      </div>
+    </section>
+    <section class="flex width rep">
+      <div class="block border-right">
+        <img src="./img/repair.png" alt="Repair" class="high width">
+        <div class="flex col cent align abs">
+          <h3 class="title bold white">Repair Patches</h3>
+          <p class="sale px-16 white">£150.50</p>
         </div>
-      </section>
-      <section class="flex width rep">
-        <div class="block border-right">
-          <img src="./img/repair.png" alt="Repair" class="high width">
-          <div class="flex col cent align abs">
-            <h3 class="title bold white">Repair Patches</h3>
-            <p class="sale px-16 white">£150.50</p>
-          </div>
+      </div>
+      <div class="block none">
+        <img src="./img/sale.png" alt="Sale" class="high">
+        <div class="flex col cent align abs dis">
+          <h3 class="title bold red">Sale</h3>
+          <i class="sale px-16">-70%</i>
         </div>
-        <div class="block none">
-          <img src="./img/sale.png" alt="Sale" class="high">
-          <div class="flex col cent align abs dis">
-            <h3 class="title bold red">Sale</h3>
-            <i class="sale px-16">-70%</i>
-          </div>
-        </div>
-      </section>
-    </article>
+      </div>
+    </section>
+  </article>
 
   <article class="flex down mg border-bottom width">
     <div class="flex grow border-right">
