--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -16,10 +16,12 @@
 <body>
   <header class="mg border-bottom">
     <article class="inch flex space">
-      <h1 class="logo-tm"></h1>
+      <a href="./start.html">
+        <h1 class="logo-tm"></h1>
+      </a>
       <section class="login-bag flex space align">
         <a href="#" class="text px-12">E-mail sing up</a>
-        <a href="#" class="text bag px-12" id="bag">Bag (0)</a>
+        <a href="./shopping-bag.html" class="text bag px-12" id="bag">Bag (0)</a>
         <a href="javascript:void(0);" class="icon" onclick="toggle()">
           <img src="./img/ico_menu.png" alt="ico" id="ico">
         </a>
