--- a/start.html
+++ b/start.html
@@ -16,10 +16,12 @@
 <body>
   <header class="mg border-bottom">
     <article class="inch flex space">
-      <h1 class="logo-tm"></h1>
+      <a href="./start.html">
+        <h1 class="logo-tm"></h1>
+      </a>
       <section class="login-bag flex space align">
         <a href="#" class="text px-12">E-mail sing up</a>
-        <a href="#" class="text bag px-12">Bag (0)</a>
+        <a href="./shopping-bag.html" class="text bag px-12">Bag (0)</a>
         <a href="javascript:void(0);" class="icon" onclick="toggle()">
           <img src="./img/ico_menu.png" alt="ico" id="ico">
         </a>
@@ -46,7 +48,7 @@
   <article class="wrapper width border-bottom">
     <section class="slider">
       <div class="slide first">
-        <a href="./shopping-bag.html">
+        <a href="./catalog.html">
           <img src="./img/1.jpg" alt="1" class="width">
         </a>
       </div>
@@ -60,10 +62,10 @@
           <img src="./img/3.jpg" alt="3" class="width">
         </a>
       </div>
-    </section>
-    <section class="buttons flex space width">
-      <button class="control" id="prev">&lt;</button>
-      <button class="control" id="next">&gt;</button>
+      <aside class="buttons flex space width">
+        <button class="control" id="prev">&lt;</button>
+        <button class="control" id="next">&gt;</button>
+      </aside>
     </section>
   </article>
 
