Dynamic content rendering

--- a/catalog.html
+++ b/catalog.html
@@ -95,97 +95,9 @@
     </div>
   </article>
 
-  <article class="mg top flex space">
-    <a href="./item.html">
-      <section class="tag px-14">
-        <img src="./img/ph1.png" alt="ph1" class="bot">
-        <span class="new">NEW</span>
-        <h4 class="bold">Only Skinny Jeans</h4>
-        <p>£65.50</p>
-      </section>
-    </a>
-    <a href="./item.html">
-      <section class="tag px-14">
-        <img src="./img/ph2.png" alt="ph2" class="bot">
-        <span class="new">NEW</span>
-        <h4 class="bold">Neck Knitted Jumper</h4>
-        <p>£76.25</p>
-      </section>
-    </a>
-    <a href="./item.html">
-      <section class="tag px-14">
-        <img src="./img/ph3.png" alt="ph3" class="bot">
-        <h4 class="bold">Turtle Neck Jumper in Rib</h4>
-        <p>£130.25</p>
-      </section>
-    </a>
-    <a href="./item.html">
-      <section class="tag px-14">
-        <img src="./img/ph4.png" alt="ph4" class="bot">
-        <h4 class="bold">With Pathwork Crochet</h4>
-        <p>£80.60</p>
-      </section>
-    </a>
-  </article>
+  <article class="mg top flex space info" id="list"></article>
 
-  <article class="mg all flex cent align">
-    <section>
-      <h2 class="px-24 ban bold">Last weekend
-        <span class="red">extra 50%</span> off on all reduced boots and shoulder bags
-      </h2>
-      <i>This offer is valid in-store and online. Prices displayed reflect this additional disount. This offer ends at 11:59
-        GMT on March 1st 2015</i>
-    </section>
-  </article>
-
-  <article class="mg top flex space">
-    <section class="tag px-14">
-      <img src="./img/ph5.png" alt="ph5" class="bot">
-      <h4 class="bold">Levi's Jeans for women</h4>
-      <i>More colours</i>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph6.png" alt="ph6" class="bot">
-      <h4 class="bold">Boyfriend T-Shirt with Bohemian Print</h4>
-      <i>£120.00 -25% </i>
-      <p class="inline">£90.00</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph7.png" alt="ph7" class="bot">
-      <h4 class="bold">Colour Block</h4>
-      <p>£550.50</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph8.png" alt="ph8" class="bot">
-      <h4 class="bold">Monki Festval Knitted</h4>
-      <p>£24.75</p>
-    </section>
-  </article>
-
-  <article class="mg top flex space">
-    <section class="tag px-14">
-      <img src="./img/ph9.png" alt="ph9" class="bot">
-      <h4 class="bold">Oversized Cardigan</h4>
-      <p>£90.00</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph10.png" alt="ph10" class="bot">
-      <h4 class="bold">Paul & Joe Sister Jumper with Neon Trims</h4>
-      <p>£19.75</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph11.png" alt="ph11" class="bot">
-      <h4 class="bold">Only Busted Knee Jean</h4>
-      <p>£140.50</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph12.png" alt="ph12" class="bot">
-      <h4 class="bold">Boyfriend T-Shirt with Paris Print</h4>
-      <p>£85.75</p>
-    </section>
-  </article>
-
-  <article class="mg mark flex cent align border-bottom top">
+  <article class="mg all flex cent align border-bottom">
     <button class="btn bold px-24">Show more</button>
   </article>
 
@@ -282,6 +194,8 @@
   <script src="./js/range.js"></script>
   <script src="./js/toggle.js"></script>
   <script src="./js/resize.js"></script>
+  <script src="./data/catalog.js"></script>
+  <script src="./js/dynamic.js"></script>
 </body>
 
 </html>
