--- a/item.html
+++ b/item.html
@@ -199,7 +199,7 @@
   <script src="./js/switcher.js"></script>
   <script src="./js/toggle.js"></script>
   <script src="./js/resize.js"></script>
-  <script src="./data/catalog.js"></script>
+  <script src="./data/mock.js"></script>
   <script src="./js/itemStore.js"></script>
 </body>
 
