Shopping bag functionality

--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -20,7 +20,7 @@
         <h1 class="logo-tm"></h1>
       </a>
       <section class="login-bag flex space align">
-        <a href="#" class="text px-12">E-mail sing up</a>
+        <a href="#" class="text px-12">E-mail sign up</a>
         <a href="./shopping-bag.html" class="text bag px-12" id="bag">Bag (0)</a>
         <a href="javascript:void(0);" class="icon" onclick="toggle()">
           <img src="./img/ico_menu.png" alt="ico" id="ico">
@@ -49,67 +49,7 @@
     <h4 class="px-16 bold">Shopping bag</h4>
   </article>
 
-  <article class="mg top flex info">
-    <section class="flex tag px-14 grow">
-      <img src="./img/ph1.png" alt="ph1" class="bot">
-      <span class="new">NEW</span>
-      <div class="flex col field">
-        <h4 class="bold">Only Skinny Jeans</h4>
-        <p class="px-16 bold">£65.50</p>
-        <span>Color: Phillipa wash</span>
-        <span>Size: UK 17</span>
-        <span class="flex align">Quantity:
-          <button class="sign minus" data-action="minusItem"></button>0
-          <button class="sign plus" data-action="plusItem"></button>
-        </span>
-        <button class="remove bold red" data-action="removeItem">Remove item</button>
-      </div>
-    </section>
-    <section class="flex tag px-14 grow">
-      <img src="./img/ph10.png" alt="ph10" class="bot">
-      <div class="flex col field">
-        <h4 class="bold">Paul & Joe Sister Jumper with Neon Trims</h4>
-        <p class="px-16 bold">£19.75</p>
-        <span>Color: Blue</span>
-        <span>Size: UK 18</span>
-        <span class="flex align">Quantity:
-          <button class="sign minus" data-action="minusItem"></button>0
-          <button class="sign plus" data-action="plusItem"></button>
-        </span>
-        <button class="remove bold red" data-action="removeItem">Remove item</button>
-      </div>
-    </section>
-
-    <section class="flex tag px-14 grow">
-      <img src="./img/ph6.png" alt="ph6" class="bot">
-      <div class="flex col field">
-        <h4 class="bold">Boyfriend T-Shirt with Bohemian print</h4>
-        <p class="px-16 bold">£90.00</p>
-        <span>Color: Black</span>
-        <span>Size: UK 18</span>
-        <span class="flex align">Quantity:
-          <button class="sign minus" data-action="minusItem"></button>0
-          <button class="sign plus" data-action="plusItem"></button>
-        </span>
-        <button class="remove bold red" data-action="removeItem">Remove item</button>
-      </div>
-    </section>
-    <section class="flex tag px-14 grow">
-      <img src="./img/ph2.png" alt="ph2" class="bot">
-      <span class="new">NEW</span>
-      <div class="flex col field">
-        <h4 class="bold">Neck Knitted Jumper</h4>
-        <p class="px-16 bold">£76.25</p>
-        <span>Color: Green</span>
-        <span>Size: UK 19</span>
-        <span class="flex align">Quantity:
-          <button class="sign minus" data-action="minusItem"></button>0
-          <button class="sign plus" data-action="plusItem"></button>
-        </span>
-        <button class="remove bold red" data-action="removeItem">Remove item</button>
-      </div>
-    </section>
-  </article>
+  <article class="mg top flex info" id="list"></article>
 
   <article class="mg flex align cent delivery">
     <p class="bold px-12">You've qualified for Free UK Next Day Delivery on your order. Don't forget to enter the code
