--- a/detail.html
+++ b/detail.html
@@ -22,7 +22,7 @@
         <h1 class="logo-tm"></h1>
       </a>
       <section class="login-bag flex space align">
-        <a href="#" class="text px-12">E-mail sing up</a>
+        <a href="#" class="text px-12">E-mail sign up</a>
         <a href="./shopping-bag.html" class="text bag px-12" id="bag">Bag (0)</a>
         <a href="javascript:void(0);" class="icon" onclick="toggle()">
           <img src="./img/ico_menu.png" alt="ico" id="ico">
