Justify-content: center

--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -49,7 +49,7 @@
     <h4 class="px-16 bold">Shopping bag</h4>
   </article>
 
-  <article class="mg top flex info" id="list"></article>
+  <article class="mg top flex info cent" id="list"></article>
 
   <article class="mg flex align cent delivery">
     <p class="bold px-12">You've qualified for Free UK Next Day Delivery on your order. Don't forget to enter the code
