--- a/detail.html
+++ b/detail.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/catalog.css">
   <link rel="stylesheet" href="./css/start.css">
-  <link rel="stylesheet" href="css/item.css">
+  <link rel="stylesheet" href="./css/item.css">
+  <link rel="stylesheet" href="./css/detail.css">
   <link rel="stylesheet" href="./css/media/media.css">
   <link rel="stylesheet" href="./css/media/media-catalog.css">
   <link rel="stylesheet" href="./css/media/media-item.css">
