Item page images

--- a/item.html
+++ b/item.html
@@ -61,13 +61,13 @@
       </div>
       <div class="flex grow item">
         <section class="container thumb" onclick="switcher(this);">
-          <img src="./img/thumb_0.png" alt="thumb-0">
+          <img src="./img/thumb_0.jpg" alt="thumb-0" class="width high">
         </section>
         <section class="container thumb" onclick="switcher(this);">
-          <img src="./img/thumb_1.png" alt="thumb-1">
+          <img src="./img/thumb_1.jpg" alt="thumb-1" class="width high">
         </section>
         <section class="container thumb" onclick="switcher(this);">
-          <img src="./img/thumb_2.png" alt="thumb-2">
+          <img src="./img/thumb_2.jpg" alt="thumb-2" class="width high">
         </section>
       </div>
     </section>
