Install Babel for IE

--- a/catalog.html
+++ b/catalog.html
@@ -189,13 +189,13 @@
     </section>
   </footer>
 
-  <script src="./js/select.js"></script>
-  <script src="./js/range.js"></script>
-  <script src="./js/toggle.js"></script>
-  <script src="./js/resize.js"></script>
+  <script src="./dist/select.js"></script>
+  <script src="./dist/range.js"></script>
+  <script src="./dist/toggle.js"></script>
+  <script src="./dist/resize.js"></script>
   <script src="./data/catalog.js"></script>
-  <script src="./js/dynamic.js"></script>
-  <script src="./js/shopping.js"></script>
+  <script src="./dist/dynamic.js"></script>
+  <script src="./dist/shopping.js"></script>
 </body>
 
 </html>
