--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -128,11 +128,11 @@
     </section>
   </footer>
 
-  <script src="./js/switcher.js"></script>
-  <script src="./js/toggle.js"></script>
-  <script src="./js/resize.js"></script>
+  <script src="./dist/switcher.js"></script>
+  <script src="./dist/toggle.js"></script>
+  <script src="./dist/resize.js"></script>
   <script src="./data/catalog.js"></script>
-  <script src="./js/storage.js"></script>
+  <script src="./dist/storage.js"></script>
 </body>
 
 </html>
