--- a/detail.html
+++ b/detail.html
@@ -146,9 +146,9 @@
     </section>
   </footer>
 
-  <script src="./js/toggle.js"></script>
-  <script src="./js/resize.js"></script>
-  <script src="./js/fromStore.js"></script>
+  <script src="./dist/toggle.js"></script>
+  <script src="./dist/resize.js"></script>
+  <script src="./dist/fromStore.js"></script>
 </body>
 
 </html>
