--- a/item.html
+++ b/item.html
@@ -196,11 +196,11 @@
     </section>
   </footer>
 
-  <script src="./js/switcher.js"></script>
-  <script src="./js/toggle.js"></script>
-  <script src="./js/resize.js"></script>
+  <script src="./dist/switcher.js"></script>
+  <script src="./dist/toggle.js"></script>
+  <script src="./dist/resize.js"></script>
   <script src="./data/mock.js"></script>
-  <script src="./js/itemStore.js"></script>
+  <script src="./dist/itemStore.js"></script>
 </body>
 
 </html>
