--- a/start.html
+++ b/start.html
@@ -189,10 +189,10 @@
     </section>
   </footer>
 
-  <script src="./js/slider.js"></script>
-  <script src="./js/toggle.js"></script>
-  <script src="./js/resize.js"></script>
-  <script src="./js/start.js"></script>
+  <script src="./dist/slider.js"></script>
+  <script src="./dist/toggle.js"></script>
+  <script src="./dist/resize.js"></script>
+  <script src="./dist/start.js"></script>
 </body>
 
 </html>
