--- a/catalog.html
+++ b/catalog.html
@@ -126,8 +126,8 @@
     </section>
   </article>
 
-  <article class="flex down mg border-bottom width">
-    <div class="flex grow border-right">
+  <article class="flex down border-bottom">
+    <div class="flex grow border-right mg">
       <section class="flex col grow">
         <h3 class="label bold px-16">Quick Links</h3>
         <div class="flex col">
