--- a/item.html
+++ b/item.html
@@ -77,7 +77,7 @@
       <p class="price take">£180.60</p>
       <form class="flex align take">
         <span class="size px-12">Size:</span>
-        <input type="radio" class="switch-border" id="r1" name="switch" />
+        <input type="radio" class="switch-border" id="r1" name="switch" checked />
         <label for="r1">
           <span class="switch-border bold">UK 52</span>
         </label>
@@ -92,7 +92,7 @@
       </form>
       <form class="flex align">
         <span class="size px-12">Color:</span>
-        <input type="radio" class="switch-border" id="r4" name="switch" />
+        <input type="radio" class="switch-border" id="r4" name="switch" checked />
         <label for="r4">
           <span class="switch-border bold">Black</span>
         </label>
@@ -102,7 +102,7 @@
         </label>
       </form>
       <div class="top">
-        <button class="btn bold px-24" data-action="plusItem">Add to bag</button>
+        <button class="btn bold px-24" data-action="plusItem">Add this item to your shopping-bag</button>
       </div>
     </section>
   </article>
@@ -133,8 +133,8 @@
     </section>
   </article>
 
-  <article class="flex down mg border-bottom width">
-    <div class="flex grow border-right">
+  <article class="flex down border-bottom">
+    <div class="flex grow border-right mg">
       <section class="flex col grow">
         <h3 class="label bold px-16">Quick Links</h3>
         <div class="flex col">
