--- a/start.html
+++ b/start.html
@@ -45,7 +45,7 @@
     </nav>
   </header>
 
-  <article class="wrapper width border-bottom">
+  <article class="wrapper border-bottom">
     <section class="slider">
       <div class="slide first">
         <a href="./catalog.html">
@@ -62,7 +62,7 @@
           <img src="./img/3.jpg" alt="3" class="width">
         </a>
       </div>
-      <aside class="buttons flex space width">
+      <aside class="buttons flex space">
         <button class="control" id="prev">&lt;</button>
         <button class="control" id="next">&gt;</button>
       </aside>
@@ -76,12 +76,10 @@
   </div>
 
   <article class="banners flex border-bottom">
-    <section class="block width border-right">
-      <a href="./item.html">
-        <img src="./img/left.png" alt="Nike Red" class="high">
-      </a>
+    <a href="./item.html" class="block width border-right">
+      <img src="./img/left.png" alt="Nike Red" class="high">
       <h3 class="title bold pos">Nike Red</h3>
-    </section>
+    </a>
     <section class="block width right">
       <a href="./catalog.html" id="sale">
         <img src="./img/right.png" alt="Caps & Hats" class="high">
@@ -126,8 +124,8 @@
     <button class="btn bold px-24">All arrivals</button>
   </article>
 
-  <article class="flex down mg border-bottom width">
-    <div class="flex grow border-right">
+  <article class="flex down border-bottom">
+    <div class="flex grow border-right mg">
       <section class="flex col grow">
         <h3 class="label bold px-16">Quick Links</h3>
         <div class="flex col">
