--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -1,138 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Shopping Bag</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/catalog.css" />
+    <link rel="stylesheet" href="./css/bag.css" />
+    <link rel="stylesheet" href="./css/media/media.css" />
+    <link rel="stylesheet" href="./css/media/media-bag.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Shopping Bag</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/catalog.css">
-  <link rel="stylesheet" href="./css/bag.css">
-  <link rel="stylesheet" href="./css/media/media.css">
-  <link rel="stylesheet" href="./css/media/media-bag.css">
-</head>
-
-<body>
-  <header class="mg border-bottom">
-    <article class="inch flex space">
-      <a href="./start.html">
-        <h1 class="logo-tm"></h1>
-      </a>
-      <section class="login-bag flex space align">
-        <a href="#" class="text px-12">E-mail sign up</a>
-        <a href="./shopping-bag.html" class="text bag px-12" id="bag">Bag (0)</a>
-        <a href="javascript:void(0);" class="icon" onclick="toggle()">
-          <img src="./img/ico_menu.png" alt="ico" id="ico">
+  <body>
+    <header class="mg border-bottom">
+      <article class="inch flex space">
+        <a href="./start.html">
+          <h1 class="logo-tm"></h1>
         </a>
+        <section class="login-bag flex space align">
+          <a href="#" class="text px-12">E-mail sign up</a>
+          <a href="./shopping-bag.html" class="text bag px-12" id="bag"
+            >Bag (0)</a
+          >
+          <a href="javascript:void(0);" class="icon" onclick="toggle()">
+            <img src="./img/ico_menu.png" alt="ico" id="ico" />
+          </a>
+        </section>
+      </article>
+      <nav class="inch flex side" id="nav">
+        <ul class="nav width bold flex space">
+          <li>Women</li>
+          <li>Men</li>
+          <li>Handbags</li>
+          <li>Accessories</li>
+          <li>Sale</li>
+          <li>New Arrivals</li>
+          <li>Clearence</li>
+          <li>Store Locator</li>
+          <li>
+            <input type="text" placeholder="Style Name" class="form_input" />
+            <img src="./img/ico.png" alt="ico" class="form_ico" />
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <article class="mg filter flex align border-bottom">
+      <h4 class="px-16 bold">Shopping bag</h4>
+    </article>
+
+    <article class="mg top flex info cent" id="list"></article>
+
+    <article class="mg flex align cent delivery">
+      <p class="bold px-12">
+        You've qualified for Free UK Next Day Delivery on your order. Don't
+        forget to enter the code <span class="red">nextday</span> at checkout
+      </p>
+    </article>
+
+    <article class="mg flex align space border-bottom but">
+      <p class="empty bold" data-action="clearStorage">Clear bag</p>
+      <button class="btn bold px-24" data-action="buyNow">Buy now</button>
+      <section>
+        <span class="px-12">Total Cost</span>
+        <p class="total bold" id="cost">£251.50</p>
       </section>
     </article>
-    <nav class="inch flex side" id="nav">
-      <ul class="nav width bold flex space">
-        <li>Women</li>
-        <li>Men</li>
-        <li>Handbags</li>
-        <li>Accessories</li>
-        <li>Sale</li>
-        <li>New Arrivals</li>
-        <li>Clearence</li>
-        <li>Store Locator</li>
-        <li>
-          <input type="text" placeholder="Style Name" class="form_input">
-          <img src="./img/ico.png" alt="ico" class="form_ico">
-        </li>
-      </ul>
-    </nav>
-  </header>
 
-  <article class="mg filter flex align border-bottom">
-    <h4 class="px-16 bold">Shopping bag</h4>
-  </article>
-
-  <article class="mg top flex info cent" id="list"></article>
-
-  <article class="mg flex align cent delivery">
-    <p class="bold px-12">You've qualified for Free UK Next Day Delivery on your order. Don't forget to enter the code
-      <span class="red">nextday</span> at checkout</p>
-  </article>
-
-  <article class="mg flex align space border-bottom but">
-    <p class="empty bold" data-action="clearStorage">Clear bag</p>
-    <button class="btn bold px-24" data-action="buyNow">Buy now</button>
-    <section>
-      <span class="px-12">Total Cost</span>
-      <p class="total bold" id="cost">£251.50</p>
-    </section>
-  </article>
-
-  <article class="flex down border-bottom">
-    <div class="flex grow border-right mg">
-      <section class="flex col grow">
-        <h3 class="label bold px-16">Quick Links</h3>
-        <div class="flex col">
-          <span class="px-14">Store locator</span>
-          <span class="px-14">Gift cards</span>
-          <span class="px-14">Size guide</span>
-          <span class="px-14">About us</span>
-          <span class="px-14">Support</span>
-        </div>
-      </section>
-      <section class="flex col grow">
-        <h3 class="label bold px-16">Customer Care</h3>
-        <div class="flex col">
-          <span class="px-14">Customer service</span>
-          <span class="px-14">Track my order</span>
-          <span class="px-14">Return policy</span>
-          <span class="px-14">Shipping & delivery</span>
-          <span class="px-14">Contact us</span>
-          <span class="px-14">Careers</span>
-        </div>
-      </section>
-    </div>
-    <div class="flex grow col">
-      <section class="flex grow sm">
-        <div class="flex col grow area">
-          <h3 class="label bold px-16">Questions</h3>
-          <span class="us">Tweet us
-            <b>@template</b>
-          </span>
-        </div>
-        <div class="flex col grow">
-          <h3 class="label bold px-16">Order by phone</h3>
-          <span>8-800-409-47-12</span>
-        </div>
-      </section>
-      <section class="flex col grow area two">
-        <div class="service px-16">
-          <i>We have our own delivery service which operates in 23 major European cities. Delivery time - 3-5 days.</i>
-        </div>
-        <article class="flex space align">
-          <div class="social" id="before">
-            <img src="./img/fb.png" alt="facebook">
-            <img src="./img/twi.png" alt="twitter">
+    <article class="mg flex border-bottom">
+      <div class="flex grow border-right">
+        <section class="flex col grow">
+          <h3 class="label bold px-16">Quick Links</h3>
+          <div class="flex col">
+            <span class="px-14">Store locator</span>
+            <span class="px-14">Gift cards</span>
+            <span class="px-14">Size guide</span>
+            <span class="px-14">About us</span>
+            <span class="px-14">Support</span>
           </div>
-        </article>
+        </section>
+        <section class="flex col grow">
+          <h3 class="label bold px-16">Customer Care</h3>
+          <div class="flex col">
+            <span class="px-14">Customer service</span>
+            <span class="px-14">Track my order</span>
+            <span class="px-14">Return policy</span>
+            <span class="px-14">Shipping & delivery</span>
+            <span class="px-14">Contact us</span>
+            <span class="px-14">Careers</span>
+          </div>
+        </section>
+      </div>
+
+      <div class="flex grow col">
+        <section class="flex sm">
+          <div class="flex col grow area">
+            <h3 class="label bold px-16">Questions</h3>
+            <span class="us">
+              Tweet us
+              <b>@template</b>
+            </span>
+          </div>
+          <div class="flex col grow">
+            <h3 class="label bold px-16">Order by phone</h3>
+            <span>8-800-409-47-12</span>
+          </div>
+        </section>
+
+        <section class="flex col area two">
+          <div class="service px-16">
+            <i
+              >We have our own delivery service which operates in 23 major
+              European cities. Delivery time - 3-5 days.</i
+            >
+          </div>
+          <article class="flex space align">
+            <div class="social" id="before">
+              <img src="./img/fb.png" alt="facebook" />
+              <img src="./img/twi.png" alt="twitter" />
+            </div>
+          </article>
+        </section>
+      </div>
+    </article>
+
+    <footer class="mg flex space align">
+      <h6>&copy; 2010-2015, The Template Group inc.</h6>
+      <h3 class="bold">
+        Share
+        <span class="share px-12">1437</span>
+      </h3>
+      <section class="flex space" id="after">
+        <h6 class="bold px-12 foot">Legal notice</h6>
+        <h6 class="bold px-12 foot">Privacy policy</h6>
+        <h6 class="bold px-12">Site map</h6>
       </section>
-    </div>
-  </article>
+    </footer>
 
-  <footer class="mg flex space align">
-    <h6>&copy; 2010-2015, The Template Group inc.</h6>
-    <h3 class="bold">Share
-      <span class="share px-12">1437</span>
-    </h3>
-    <section class="flex foot space" id="after">
-      <h6 class="bold px-12">Legal notice</h6>
-      <h6 class="bold px-12">Privacy policy</h6>
-      <h6 class="bold px-12">Site map</h6>
-    </section>
-  </footer>
-
-  <script src="./dist/switcher.js"></script>
-  <script src="./dist/toggle.js"></script>
-  <script src="./dist/resize.js"></script>
-  <script src="./data/catalog.js"></script>
-  <script src="./dist/storage.js"></script>
-</body>
-
+    <script src="./dist/switcher.js"></script>
+    <script src="./dist/toggle.js"></script>
+    <script src="./dist/resize.js"></script>
+    <script src="./data/catalog.js"></script>
+    <script src="./dist/storage.js"></script>
+  </body>
 </html>
